Rename update to post and continue developing stats endpoint
